--- a/Fermi Notifier/index.html
+++ b/Fermi Notifier/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="CSS/custom.css">
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/responsive_grid.css">
-    <title>Home</title>
+    <title>Fermi Notifier</title>
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <!-- NAVBAR -->
     <nav class="navbar">
         <div class="logo">
-            LOGO
+            FERMI NOTIFIER
         </div>
         <a href="#" class="hamburger">
             <span class="line"></span>
@@ -29,17 +29,17 @@
         <div class="nav-links">
             <ul>
                 <li>
-                    <a href="#">&gt <span>Login</a><!-- se il login è già stto effettuato, visualizzare il nome dell'utente-->
+                    <a href="HTML/login.html">&gt <span>Login</a><!-- se il login è già stato effettuato, visualizzare il nome dell'utente-->
                 </li>
                 <li>
-                    <a href="#">&gt <span>Home</span></a>
+                    <a href="index.html">&gt <span>Home</span></a>
                 </li>
                 <li>
-                    <a href="#">&gt <span>Account</span></a>
+                    <a href="HTML/account.html">&gt <span>Account</span></a>
                 </li>
-                <li>
+                <!--    <li>
                     <a href="#">&gt <span>Chi siamo</span></a>
-                </li>
+                </li>   -->
             </ul>
         </div>
     </nav>
@@ -63,7 +63,7 @@
         </div>
         <div class="container-subtitle">
             <p class="main-subtitle4">
-                <span style="color: white;">&gt</span> sempre.  <br>
+                <span style="color: white;">&gt</span> sempre.  
             </p>
         </div>
     </div>
